Accordion BS fixed as incorrect CDN and <script> was used. Now collapse is working correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,7 @@ form{
     background-color: white;
     border-radius: 5px;
 }
-.card-header button{
+.accordion-item button{
     text-transform: uppercase;
     font-weight: 600;
     color:rgb(238, 136, 20);
@@ -307,7 +307,7 @@ form{
 
 }
 
-.card-header{
+.accordion-item{
     border: solid 2px #6b6b69;
     border-radius: 10px;
 
